test/fail/variance/list_assign_covariance_overridden.lly
#[
SyntaxError: Cannot assign type 'List[Two]' to type 'List[One]'.
    from list_assign_covariance_overridden.lly:12
]#

class One {}
class Two < One {}

var v = [[One::new()]]
var v2 = [Two::new()]
# Assignment is naturally covariant. However, lists are invariant.
v[0] = v2
